--- a/blog-details.html
+++ b/blog-details.html
@@ -10,158 +10,37 @@
 
     <!-- Unified Responsive Framework -->
     <link rel="stylesheet" href="assets/css/framework-unified.css">
-    <style>
-        /* Blog Article Specific Styles */
-        .blog-article {
-            padding: var(--space-8) 0;
-        }
-
-        .blog-header {
-            text-align: center;
-            margin-bottom: var(--space-8);
-            padding-bottom: var(--space-6);
-            border-bottom: 2px solid var(--color-border);
-        }
-
-        .blog-meta {
-            color: var(--color-text-muted);
-            font-size: var(--font-size-sm);
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
-            margin-bottom: var(--space-2);
-        }
-
-        .blog-title {
-            font-size: var(--font-size-3xl);
-            font-weight: 800;
-            margin-bottom: var(--space-4);
-            line-height: var(--line-height-tight);
-        }
-
-        .blog-subtitle {
-            font-size: var(--font-size-lg);
-            color: var(--color-text-muted);
-            max-width: 700px;
-            margin: 0 auto;
-        }
-
-        .blog-content {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 0 var(--space-4);
-        }
-
-        .blog-content h2 {
-            font-size: var(--font-size-2xl);
-            font-weight: 800;
-            margin: var(--space-8) 0 var(--space-4) 0;
-            color: var(--color-primary);
-        }
-
-        .blog-content h3 {
-            font-size: var(--font-size-xl);
-            font-weight: 600;
-            margin: var(--space-6) 0 var(--space-3) 0;
-        }
-
-        .blog-content p {
-            margin-bottom: var(--space-4);
-            line-height: var(--line-height-relaxed);
-        }
-
-        .blog-content img {
-            width: 100%;
-            height: auto;
-            border-radius: var(--border-radius);
-            margin: var(--space-6) 0;
-            box-shadow: var(--shadow-md);
-        }
-
-        .blog-image-caption {
-            text-align: center;
-            font-size: var(--font-size-sm);
-            color: var(--color-text-muted);
-            font-style: italic;
-            margin-top: calc(var(--space-2) * -1);
-            margin-bottom: var(--space-6);
-        }
-
-        .blog-quote {
-            border-left: 4px solid var(--color-primary);
-            padding-left: var(--space-4);
-            margin: var(--space-6) 0;
-            font-size: var(--font-size-lg);
-            font-style: italic;
-            color: var(--color-text-muted);
-            line-height: var(--line-height-relaxed);
-        }
-
-        .blog-image-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: var(--space-4);
-            margin: var(--space-6) 0;
-        }
-
-        .blog-image-grid img {
-            margin: 0;
-        }
-
-        @media (max-width: 767px) {
-            .blog-image-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        .blog-highlight-box {
-            background: var(--color-surface);
-            border: 1px solid var(--color-border);
-            border-radius: var(--border-radius);
-            padding: var(--space-4);
-            margin: var(--space-6) 0;
-        }
-
-        .blog-highlight-box h4 {
-            margin-top: 0;
-            color: var(--color-primary);
-        }
-
-        .blog-full-width-image {
-            margin: var(--space-8) calc(var(--space-4) * -1);
-            width: calc(100% + var(--space-8));
-            max-width: none;
-            border-radius: 0;
-        }
-
-        @media (min-width: 768px) {
-            .blog-full-width-image {
-                margin: var(--space-8) calc(var(--space-4) * -4);
-                width: calc(100% + var(--space-8));
-            }
-        }
-    </style>
 </head>
 <body data-theme="light">
     <header class="site-header">
         <nav class="nav">
             <a class="nav__logo" href="index.html" aria-label="YourSchool">
-                <img src="assets/logo/mc-logo-m.svg" alt="YourSchool" class="nav__logo-img">
+                <img src="assets/logo/mc-logo.svg" alt="YourSchool" class="nav__logo-img">
             </a>
 
             <!-- THEME TOGGLE -->
             <div class="theme-toggle" role="group" aria-label="Color theme">
-                <input type="radio" name="theme" id="theme-light" value="light" checked>
-                <label for="theme-light" class="theme-toggle__label" title="Light theme">☀️</label>
+                <input type="radio" name="theme" id="theme-light-blog-details" value="light" checked>
+                <label for="theme-light-blog-details" class="theme-toggle__label" title="Light theme">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16ZM12 18C15.3137 18 18 15.3137 18 12C18 8.68629 15.3137 6 12 6C8.68629 6 6 8.68629 6 12C6 15.3137 8.68629 18 12 18Z" fill="currentColor"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M11 0H13V4.06189C12.6724 4.02104 12.3387 4 12 4C11.6613 4 11.3276 4.02104 11 4.06189V0ZM7.0943 5.68018L4.22173 2.80761L2.80752 4.22183L5.6801 7.09441C6.09071 6.56618 6.56608 6.0908 7.0943 5.68018ZM4.06189 11H0V13H4.06189C4.02104 12.6724 4 12.3387 4 12C4 11.6613 4.02104 11.3276 4.06189 11ZM5.6801 16.9056L2.80751 19.7782L4.22173 21.1924L7.0943 18.3198C6.56608 17.9092 6.09071 17.4338 5.6801 16.9056ZM11 19.9381V24H13V19.9381C12.6724 19.979 12.3387 20 12 20C11.6613 20 11.3276 19.979 11 19.9381ZM16.9056 18.3199L19.7781 21.1924L21.1923 19.7782L18.3198 16.9057C17.9092 17.4339 17.4338 17.9093 16.9056 18.3199ZM19.9381 13H24V11H19.9381C19.979 11.3276 20 11.6613 20 12C20 12.3387 19.979 12.6724 19.9381 13ZM18.3198 7.0943L21.1923 4.22183L19.7781 2.80762L16.9056 5.6801C17.4338 6.09071 17.9092 6.56608 18.3198 7.0943Z" fill="currentColor"/>
+                    </svg>
+                </label>
 
-                <input type="radio" name="theme" id="theme-dark" value="dark">
-                <label for="theme-dark" class="theme-toggle__label" title="Dark theme">🌙</label>
+                <input type="radio" name="theme" id="theme-dark-blog-details" value="dark">
+                <label for="theme-dark-blog-details" class="theme-toggle__label" title="Dark theme">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12.2256 2.00253C9.59172 1.94346 6.93894 2.9189 4.92893 4.92891C1.02369 8.83415 1.02369 15.1658 4.92893 19.071C8.83418 22.9763 15.1658 22.9763 19.0711 19.071C21.0811 17.061 22.0565 14.4082 21.9975 11.7743C21.9796 10.9772 21.8669 10.1818 21.6595 9.40643C21.0933 9.9488 20.5078 10.4276 19.9163 10.8425C18.5649 11.7906 17.1826 12.4053 15.9301 12.6837C14.0241 13.1072 12.7156 12.7156 12 12C11.2844 11.2844 10.8928 9.97588 11.3163 8.0699C11.5947 6.81738 12.2094 5.43511 13.1575 4.08368C13.5724 3.49221 14.0512 2.90664 14.5935 2.34046C13.8182 2.13305 13.0228 2.02041 12.2256 2.00253ZM17.6569 17.6568C18.9081 16.4056 19.6582 14.8431 19.9072 13.2186C16.3611 15.2643 12.638 15.4664 10.5858 13.4142C8.53361 11.362 8.73568 7.63895 10.7814 4.09281C9.1569 4.34184 7.59434 5.09193 6.34315 6.34313C3.21895 9.46732 3.21895 14.5326 6.34315 17.6568C9.46734 20.781 14.5327 20.781 17.6569 17.6568Z" fill="currentColor"/>
+                    </svg>
+                </label>
             </div>
 
             <ul class="nav__links">
-                <li><a href="index.html" class="nav__link">Home</a></li>
-                <li><a href="about.html" class="nav__link">About</a></li>
-                <li><a href="contact.html" class="nav__link">Contact</a></li>
-                <li><a href="blog.html" class="nav__link is-active">Blog</a></li>
+                <li><a href="index.html" class="nav__link nav__link--underline">Home</a></li>
+                <li><a href="about.html" class="nav__link nav__link--underline">About</a></li>
+                <li><a href="contact.html" class="nav__link nav__link--underline">Contact</a></li>
+                <li><a href="blog.html" class="nav__link nav__link--underline is-active">Blog</a></li>
             </ul>
 
             <a href="#" class="btn btn--outline">Collect free website</a>
@@ -267,7 +146,7 @@
                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. The future of education is bright, and it starts with embracing change today.</p>
 
                     <!-- Navigation -->
-                    <div style="margin-top: var(--space-8); padding-top: var(--space-6); border-top: 2px solid var(--color-border);">
+                    <div class="mt-8 pt-6 border-top">
                         <a href="blog.html" class="btn btn--outline">← Back to Blog</a>
                     </div>
                 </div>
@@ -286,6 +165,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="blog.html">Blog</a></li>
+                        <li><a href="showcase.html">Showcase</a></li>
                     </ul>
                 </div>
 
