--- a/blog.html
+++ b/blog.html
@@ -68,6 +68,7 @@
                     <ul class="nav__links">
                         <li><a href="index.html" class="nav__link nav__link--underline">Home</a></li>
                         <li><a href="about.html" class="nav__link nav__link--underline">About</a></li>
+                        <li><a href="solutions.html" class="nav__link nav__link--underline">Solutions</a></li>
                         <li><a href="contact.html" class="nav__link nav__link--underline">Contact</a></li>
                         <li><a href="blog.html" class="nav__link nav__link--underline is-active">Blog</a></li>
                     </ul>
@@ -91,6 +92,7 @@
                     <ul class="nav__links nav__links--mobile">
                         <li><a href="index.html" class="nav__link nav__link--underline">Home</a></li>
                         <li><a href="about.html" class="nav__link nav__link--underline">About</a></li>
+                        <li><a href="solutions.html" class="nav__link nav__link--underline">Solutions</a></li>
                         <li><a href="contact.html" class="nav__link nav__link--underline">Contact</a></li>
                         <li><a href="blog.html" class="nav__link nav__link--underline is-active">Blog</a></li>
                     </ul>
@@ -359,6 +361,7 @@
                         <ul class="footer__nav">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
+                            <li><a href="solutions.html">Solutions</a></li>
                             <li><a href="contact.html">Contact</a></li>
                             <li><a href="blog.html">Blog</a></li>
                             <li><a href="showcase.html">Showcase</a></li>
