--- a/contact.html
+++ b/contact.html
@@ -191,6 +191,7 @@
                         <ul class="footer__nav">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
+                            <li><a href="solutions.html">Solutions</a></li>
                             <li><a href="contact.html">Contact</a></li>
                             <li><a href="blog.html">Blog</a></li>
                             <li><a href="showcase.html">Showcase</a></li>
