--- a/typography-demo.html
+++ b/typography-demo.html
@@ -141,10 +141,11 @@
     </style>
 </head>
 <body data-theme="light">
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <header class="site-header">
         <nav class="nav">
-            <a class="nav__logo" href="index.html" aria-label="Home">
-                <img src="assets/logo/mc-logo.svg" alt="Logo" class="nav__logo-img">
+            <a class="nav__logo" href="index.html" aria-label="YourSchool">
+                <img src="assets/logo/mc-logo.svg" alt="YourSchool" class="nav__logo-img">
             </a>
 
             <button class="nav__burger" aria-label="Toggle menu" aria-expanded="false">
@@ -157,12 +158,13 @@
                 <ul class="nav__links">
                     <li><a href="index.html" class="nav__link nav__link--underline">Home</a></li>
                     <li><a href="about.html" class="nav__link nav__link--underline">About</a></li>
+                    <li><a href="solutions.html" class="nav__link nav__link--underline">Solutions</a></li>
                     <li><a href="contact.html" class="nav__link nav__link--underline">Contact</a></li>
                     <li><a href="blog.html" class="nav__link nav__link--underline">Blog</a></li>
                     <li><a href="typography-demo.html" class="nav__link nav__link--underline is-active">Typography</a></li>
                 </ul>
 
-                                <!-- THEME TOGGLE -->
+                <!-- THEME TOGGLE -->
                 <button class="theme-toggle" type="button" aria-label="Toggle color theme" title="Toggle theme">
                     <span class="theme-toggle__icon theme-toggle__icon--light">
                         <img src="assets/icons/sun.svg" alt="Light theme" width="24" height="24">
@@ -171,6 +173,8 @@
                         <img src="assets/icons/moon.svg" alt="Dark theme" width="24" height="24">
                     </span>
                 </button>
+
+                <a href="contact.html" class="btn btn--outline">Free website</a>
             </div>
 
             <!-- Mobile Menu Overlay -->
@@ -179,12 +183,13 @@
                 <ul class="nav__links nav__links--mobile">
                     <li><a href="index.html" class="nav__link nav__link--underline">Home</a></li>
                     <li><a href="about.html" class="nav__link nav__link--underline">About</a></li>
+                    <li><a href="solutions.html" class="nav__link nav__link--underline">Solutions</a></li>
                     <li><a href="contact.html" class="nav__link nav__link--underline">Contact</a></li>
                     <li><a href="blog.html" class="nav__link nav__link--underline">Blog</a></li>
                     <li><a href="typography-demo.html" class="nav__link nav__link--underline is-active">Typography</a></li>
                 </ul>
 
-                                <button class="theme-toggle theme-toggle--mobile" type="button" aria-label="Toggle color theme" title="Toggle theme">
+                <button class="theme-toggle theme-toggle--mobile" type="button" aria-label="Toggle color theme" title="Toggle theme">
                     <span class="theme-toggle__icon theme-toggle__icon--light">
                         <img src="assets/icons/sun.svg" alt="Light theme" width="24" height="24">
                     </span>
@@ -192,7 +197,10 @@
                         <img src="assets/icons/moon.svg" alt="Dark theme" width="24" height="24">
                     </span>
                 </button>
+
+                <a href="contact.html" class="btn btn--outline btn--mobile">Free website</a>
             </div>
+
         </nav>
     </header>
 
