--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
         <!-- Unified Responsive Framework -->
         <link rel="stylesheet" href="assets/css/framework-unified.css" />
     </head>
-    <body data-theme="light">
+    <body data-theme="dark">
         <a href="#main-content" class="skip-link">Skip to main content</a>
         <header class="site-header">
             <nav class="nav">
