--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         <!-- Unified Responsive Framework (includes grid, base styles, components, accessibility, touch optimization) -->
         <link rel="stylesheet" href="assets/css/framework-unified.css" />
     </head>
-    <body data-theme="light">
+    <body data-theme="dark">
         <a href="#main-content" class="skip-link">Skip to main content</a>
         <header class="site-header">
             <nav class="nav">
