--- a/showcase.html
+++ b/showcase.html
@@ -40,7 +40,7 @@
     <!-- Typography System -->
     <link rel="stylesheet" href="assets/css/typography-system.css">
 </head>
-<body data-theme="light">
+<body data-theme="dark">
     <a href="#main-content" class="skip-link">Skip to main content</a>
     <header class="site-header">
         <nav class="nav">
@@ -208,7 +208,7 @@
         }
     </style>
 </head>
-<body data-theme="light">
+<body data-theme="dark">
     <div class="viewport-info" id="viewport-info">
         w: <span id="viewport-width">0px</span> | <span id="breakpoint">XS</span>
     </div>
