--- a/typography-demo.html
+++ b/typography-demo.html
@@ -40,7 +40,7 @@
     <!-- Typography System -->
     <link rel="stylesheet" href="assets/css/typography-system.css">
 </head>
-<body data-theme="light">
+<body data-theme="dark">
     <a href="#main-content" class="skip-link">Skip to main content</a>
     <header class="site-header">
         <nav class="nav">
@@ -140,7 +140,7 @@
         }
     </style>
 </head>
-<body data-theme="light">
+<body data-theme="dark">
     <a href="#main-content" class="skip-link">Skip to main content</a>
     <header class="site-header">
         <nav class="nav">
