Update framework, add content system, and improve testing setup
- Update framework-unified.css with latest design tokens
- Add content generation system with scripts and documentation
- Update HTML pages with latest framework changes
- Improve test setup and browser testing configuration
- Add asset optimization scripts
- Update package.json dependencies

--- a/typography-demo.html
+++ b/typography-demo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Typography System Demo – Fluid Typography</title>
+        <title>Typography System Demo | Marceli Cieplik | UI/UX Designer</title>
 
         <!-- SEO Meta Tags -->
         <meta
@@ -15,23 +15,23 @@
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://yourschool.org/typography-demo.html" />
+        <meta property="og:url" content="https://marceicieplik.com/typography-demo.html" />
         <meta property="og:title" content="Typography System Demo - Fluid Typography" />
         <meta
             property="og:description"
             content="Demonstration of the fluid typography system with responsive scaling and comprehensive utilities."
         />
-        <meta property="og:image" content="https://yourschool.org/assets/logo/mc-logo.svg" />
+        <meta property="og:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" />
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary" />
-        <meta name="twitter:url" content="https://yourschool.org/typography-demo.html" />
+        <meta name="twitter:url" content="https://marceicieplik.com/typography-demo.html" />
         <meta name="twitter:title" content="Typography System Demo - Fluid Typography" />
         <meta
             name="twitter:description"
             content="Demonstration of the fluid typography system with responsive scaling and comprehensive utilities."
         />
-        <meta name="twitter:image" content="https://yourschool.org/assets/logo/mc-logo.svg" />
+        <meta name="twitter:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" />
 
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -86,8 +86,8 @@
         <a href="#main-content" class="skip-link">Skip to main content</a>
         <header class="site-header">
             <nav class="nav">
-                <a class="nav__logo" href="index.html" aria-label="YourSchool">
-                    <img src="assets/logo/mc-logo.svg" alt="YourSchool" class="nav__logo-img" />
+                <a class="nav__logo" href="index.html" aria-label="Marceli Cieplik">
+                    <img src="assets/logo/mc-logo.svg" alt="Marceli Cieplik" class="nav__logo-img" />
                 </a>
 
                 <button class="nav__burger" aria-label="Toggle menu" aria-expanded="false">
