--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Blog – Your School</title>
+        <title>Blog | Marceli Cieplik | UI/UX Designer</title>
 
         <!-- SEO Meta Tags -->
         <meta
@@ -15,23 +15,23 @@
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://yourschool.org/blog.html" />
+        <meta property="og:url" content="https://marceicieplik.com/blog.html" />
         <meta property="og:title" content="Blog - Marceli Cieplik" />
         <meta
             property="og:description"
             content="Articles and insights on UI/UX design, design systems, and AI integration."
         />
-        <meta property="og:image" content="https://yourschool.org/assets/logo/mc-logo.svg" />
+        <meta property="og:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" />
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary" />
-        <meta name="twitter:url" content="https://yourschool.org/blog.html" />
+        <meta name="twitter:url" content="https://marceicieplik.com/blog.html" />
         <meta name="twitter:title" content="Blog - Marceli Cieplik" />
         <meta
             name="twitter:description"
             content="Articles and insights on UI/UX design, design systems, and AI integration."
         />
-        <meta name="twitter:image" content="https://yourschool.org/assets/logo/mc-logo.svg" />
+        <meta name="twitter:image" content="https://marceicieplik.com/assets/logo/mc-logo.svg" />
 
 
         <!-- Google Fonts -->
@@ -49,8 +49,8 @@
         <a href="#main-content" class="skip-link">Skip to main content</a>
         <header class="site-header">
             <nav class="nav">
-                <a class="nav__logo" href="index.html" aria-label="YourSchool">
-                    <img src="assets/logo/mc-logo.svg" alt="YourSchool" class="nav__logo-img" />
+                <a class="nav__logo" href="index.html" aria-label="Marceli Cieplik">
+                    <img src="assets/logo/mc-logo.svg" alt="Marceli Cieplik" class="nav__logo-img" />
                 </a>
 
                 <button class="nav__burger" aria-label="Toggle menu" aria-expanded="false">
