Rename light theme showcase to dark theme and create new light theme showcase page

--- a/typography-demo.html
+++ b/typography-demo.html
@@ -84,7 +84,7 @@
     </head>
 <body data-theme="dark">
     <!-- Page Load Spinner -->
-    <div class="page-spinner" id="page-spinner">
+    <div class="page-spinner">
         <div class="page-spinner__content">
             <div class="page-spinner__logo"></div>
             <div class="page-spinner__spinner"></div>
