--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
     </head>
 <body data-theme="dark">
     <!-- Page Load Spinner -->
-    <div class="page-spinner" id="page-spinner">
+    <div class="page-spinner">
         <div class="page-spinner__content">
             <div class="page-spinner__logo"></div>
             <div class="page-spinner__spinner"></div>
@@ -61,7 +61,7 @@
                     <img src="assets/logo/mc-logo.svg" alt="Marceli Cieplik" class="nav__logo-img" />
                 </a>
 
-                <button class="nav__burger" aria-label="Toggle menu" aria-expanded="false">
+                <button type="button" class="nav__burger" aria-label="Toggle menu" aria-expanded="false">
                     <span class="nav__burger-line"></span>
                     <span class="nav__burger-line"></span>
                     <span class="nav__burger-line"></span>
