--- a/test-dark-theme.html
+++ b/test-dark-theme.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Light Theme Test</title>
+    <title>Dark Theme Test</title>
     <link rel="stylesheet" href="assets/css/framework-unified.css">
 </head>
-<body data-theme="light">
+<body data-theme="dark">
     <!-- Page Load Spinner -->
     <div class="page-spinner">
         <div class="page-spinner__content">
@@ -51,8 +51,8 @@
         <div class="container">
             <div class="grid" style="margin-top: var(--space-8); margin-bottom: var(--space-8);">
                 <div class="col-12">
-                    <h1>Light Theme Test Page</h1>
-                    <p class="lead">Testing the enhanced light theme colors and components.</p>
+                    <h1>Dark Theme Test Page</h1>
+                    <p class="lead">Testing the enhanced dark theme colors and components.</p>
                 </div>
             </div>
 
@@ -65,7 +65,7 @@
                             <div class="card__body">
                                 <div style="height: 100px; background: var(--color-bg); border: 1px solid var(--color-border); margin-bottom: var(--space-3);"></div>
                                 <h3 style="font-size: var(--font-size-sm);">Background</h3>
-                                <p style="font-size: var(--font-size-xs); color: var(--color-text-muted);">#f0f7f7</p>
+                                <p style="font-size: var(--font-size-xs); color: var(--color-text-muted);">#080c0e</p>
                             </div>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                             <div class="card__body">
                                 <div style="height: 100px; background: var(--color-surface); border: 1px solid var(--color-border); margin-bottom: var(--space-3);"></div>
                                 <h3 style="font-size: var(--font-size-sm);">Surface (Cards)</h3>
-                                <p style="font-size: var(--font-size-xs); color: var(--color-text-muted);">#ffffff</p>
+                                <p style="font-size: var(--font-size-xs); color: var(--color-text-muted);">#19242b</p>
                             </div>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <div class="card__body">
                                 <div style="height: 100px; background: var(--color-accent); border: 1px solid var(--color-border); margin-bottom: var(--space-3);"></div>
                                 <h3 style="font-size: var(--font-size-sm);">Accent</h3>
-                                <p style="font-size: var(--font-size-xs); color: var(--color-text-muted);">#10b981 (Emerald)</p>
+                                <p style="font-size: var(--font-size-xs); color: var(--color-text-muted);">#fbbf24 (Amber)</p>
                             </div>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <h3>Standard Card</h3>
-                                <p>This is a standard card with white surface and subtle shadow.</p>
+                                <p>This is a standard card with dark surface and subtle shadow.</p>
                                 <button class="btn btn--primary btn--sm">Learn More</button>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <h3>Premium Feel</h3>
-                                <p>Pure white surface with refined borders and elevation.</p>
+                                <p>Dark surface with refined borders and elevation.</p>
                                 <button class="btn btn--outline btn--sm">Explore</button>
                             </div>
                         </div>
@@ -149,16 +149,16 @@
                 <h2>Form Elements</h2>
                 <form class="form">
                     <div class="form__row">
-                        <label for="test-name-light">Name</label>
-                        <input type="text" id="test-name-light" placeholder="Enter your name" required>
+                        <label for="test-name-dark">Name</label>
+                        <input type="text" id="test-name-dark" placeholder="Enter your name" required>
                     </div>
                     <div class="form__row">
-                        <label for="test-email-light">Email</label>
-                        <input type="email" id="test-email-light" placeholder="your@email.com" required>
+                        <label for="test-email-dark">Email</label>
+                        <input type="email" id="test-email-dark" placeholder="your@email.com" required>
                     </div>
                     <div class="form__row">
-                        <label for="test-message-light">Message</label>
-                        <textarea id="test-message-light" rows="4" placeholder="Your message here..."></textarea>
+                        <label for="test-message-dark">Message</label>
+                        <textarea id="test-message-dark" rows="4" placeholder="Your message here..."></textarea>
                     </div>
                     <button type="submit" class="btn btn--primary">Submit Form</button>
                 </form>
@@ -250,7 +250,7 @@ console.log(example);</code></pre>
     <footer class="site-footer">
         <div class="container">
             <p style="text-align: center; color: var(--color-text-muted);">
-                Light Theme Test Page - Enhanced UI/UX
+                Dark Theme Test Page - Enhanced UI/UX
             </p>
         </div>
     </footer>
