Fix linting issues in theme showcase pages (button types, trailing whitespace)

--- a/test-light-theme.html
+++ b/test-light-theme.html
@@ -16,13 +16,13 @@
     </div>
 
     <a href="#main-content" class="skip-link">Skip to main content</a>
-    
+
     <header class="site-header">
         <nav class="nav">
             <a class="nav__logo" href="index.html" aria-label="Home">
                 <img src="assets/logo/mc-logo.svg" alt="MC Logo" class="nav__logo-img">
             </a>
-            <button class="nav__burger" aria-label="Toggle menu" aria-expanded="false">
+            <button type="button" class="nav__burger" aria-label="Toggle menu" aria-expanded="false">
                 <span class="nav__burger-line"></span>
                 <span class="nav__burger-line"></span>
                 <span class="nav__burger-line"></span>
@@ -103,10 +103,10 @@
             <section style="margin-bottom: var(--space-8);">
                 <h2>Buttons</h2>
                 <div style="display: flex; gap: var(--space-3); flex-wrap: wrap;">
-                    <button class="btn btn--primary">Primary Button</button>
-                    <button class="btn btn--secondary">Secondary Button</button>
-                    <button class="btn btn--outline">Outline Button</button>
-                    <button class="btn btn--ghost">Ghost Button</button>
+                    <button type="button" class="btn btn--primary">Primary Button</button>
+                    <button type="button" class="btn btn--secondary">Secondary Button</button>
+                    <button type="button" class="btn btn--outline">Outline Button</button>
+                    <button type="button" class="btn btn--ghost">Ghost Button</button>
                 </div>
             </section>
 
@@ -119,7 +119,7 @@
                             <div class="card__body">
                                 <h3>Standard Card</h3>
                                 <p>This is a standard card with white surface and subtle shadow.</p>
-                                <button class="btn btn--primary btn--sm">Learn More</button>
+                                <button type="button" class="btn btn--primary btn--sm">Learn More</button>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                             <div class="card__body">
                                 <h3>Premium Feel</h3>
                                 <p>Pure white surface with refined borders and elevation.</p>
-                                <button class="btn btn--outline btn--sm">Explore</button>
+                                <button type="button" class="btn btn--outline btn--sm">Explore</button>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                             <div class="card__body">
                                 <h3>Sophisticated</h3>
                                 <p>Hover over cards to see the refined interactions.</p>
-                                <button class="btn btn--ghost btn--sm">Details</button>
+                                <button type="button" class="btn btn--ghost btn--sm">Details</button>
                             </div>
                         </div>
                     </div>
