Add YouTube badge logo to footer across all pages

--- a/test-dark-theme.html
+++ b/test-dark-theme.html
@@ -249,6 +249,11 @@ console.log(example);</code></pre>
 
     <footer class="site-footer">
         <div class="container">
+            <div class="footer__logo">
+                <a href="index.html" class="footer__logo-link" aria-label="Home">
+                    <img src="assets/logo/youtube-badge.svg" alt="YouTube" class="footer__logo-img">
+                </a>
+            </div>
             <p style="text-align: center; color: var(--color-text-muted);">
                 Dark Theme Test Page - Enhanced UI/UX
             </p>
