--- a/typography-demo.html
+++ b/typography-demo.html
@@ -509,6 +509,11 @@ console.log(message);</code></pre>
 
         <footer class="site-footer">
             <div class="container">
+                <div class="footer__logo">
+                    <a href="index.html" class="footer__logo-link" aria-label="Home">
+                        <img src="assets/logo/youtube-badge.svg" alt="YouTube" class="footer__logo-img">
+                    </a>
+                </div>
                 <div class="grid footer__content">
                     <div class="col-12 col-md-4 footer__column">
                         <h4>Navigation</h4>
