--- a/about.html
+++ b/about.html
@@ -216,6 +216,11 @@
 
     <footer class="site-footer">
         <div class="container">
+            <div class="footer__logo">
+                <a href="index.html" class="footer__logo-link" aria-label="Home">
+                    <img src="assets/logo/youtube-badge.svg" alt="YouTube" class="footer__logo-img">
+                </a>
+            </div>
             <div class="grid footer__content">
                 <!-- Column 1: Navigation Links -->
                 <div class="col-12 col-md-4 footer__column">
